# flask-geolocation

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py  tox.ini
data/GeoLite2-Country-CSV_20221014/: GeoLite2-Country-Locations-de.csv  GeoLite2-Country-Locations-es.csv
requirements/: dev.txt  docs.txt  style.txt  tests.txt
src/flask_geo/: __about__.py  __init__.py  config.py  geo.py  geo_manager.py  ip_database.py  ip_database_test.py  timezone.py  utils.py
src/flask_geolocation/: __about__.py  __init__.py  geo.py  geo_manager.py  ip_database.py  timezone.py
tests/: test_geo.py  test_ip_database.py
tests/data/GeoLite2-Country-CSV_20221014/: GeoLite2-Country-Locations-fr.csv  GeoLite2-Country-Locations-ja.csv  GeoLite2-Country-Locations-pt-BR.csv  GeoLite2-Country-Locations-ru.csv  GeoLite2-Country-Locations-zh-CN.csv
tests/templates/: country.html
